Format and rearrange code (#10)